--- a/views/consulta.ejs
+++ b/views/consulta.ejs
@@ -39,7 +39,7 @@
                 </tbody>
             </table>
             <% } else if (typeof creditos !== "undefined") { %>
-                <p>Você não tem acesso a créditos no momento</p>
+                <p style="text-align: center;">Você não tem acesso a créditos no momento</p>
             <% } %>
         </div>
         <form>
